--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Parallax Template - uplusion23</title>
+    <title>ProjectEcho.com</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-smooth-scroll/1.5.5/jquery.smooth-scroll.min.js"></script>
   </head>
   <body>
@@ -15,8 +15,8 @@
     </div>
     <div class="parallax p1" id="section-1">
       <hgroup>
-        <h1>Hello.</h1>
-        <h2>I’m a startup.</h2>
+        <h1>Welcome to Echo!</h1>
+        <h2>We are currently under development, please bare with us!</h2>
       </hgroup>
     </div>
     <div class="row">
