--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     </head>
     <body class="index">
     
-   <img src="Images/download.jpg" alt="Book Cover" width="250" height="200" class="right"> 
-   <h2>The Art of Racing in the Rain Summary</h2>
-   <br><br><br><br><br><br><br><br>
+   <img src="Images/IMG-3281.GIF" alt="Echo Logo" width="250" height="200" class="left"> 
+      <br><br><br><br><br><br><br><br>
    
 <h3>What is Project Echo?</h3>
 <p> TYPE HERE
@@ -29,6 +28,6 @@
     </body>
     
 <footer>
-        <h4>Copyright Project Echo 2023, all rights reserved.</h4>
+        <h4>© Project Echo 2023, all rights reserved.</h4>
     </footer>
 </html>
