--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <img src="Images/IMG-3281.GIF" alt="Echo Logo" width="250" height="200" class="left"> 
       <br><br><br><br><br><br><br><br>
    
-<h3>What is Project Echo?</h3>
+<h3 class=”list”> What is Project Echo?</h3>
 <p> TYPE HERE
     </p>
 
