--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang = "en">
      
-    <head>
+    <head class=”index”>
         <title>Welcome To Project Echo</title>
         <link rel="shortcut icon" href="Images/download-favicon.jpg">
-        <link rel="stylesheet" type="text/css" href="style.css"/>
+        <link real="stylesheet" type="text/css" href="style.css"/>
         <script src="script.js"></script>
     </head>
-    <body class="index">
+    <body>
     
    <img src="Images/IMG-3281.GIF" alt="Echo Logo" width="250" height="200" class="left"> 
       <br><br><br><br><br><br><br><br>
    
-<h3 class=”list”> What is Project Echo?</h3>
+<h3 class=”center”> What is Project Echo?</h3>
 <p> TYPE HERE
     </p>
 
 <br><br><br>
 
-<h3>Sources</h3>
+<h3 class=”left”>Sources</h3>
 <ul>
 <li> <a href=https://github.com/PR0G4M3R target="_blank">Github</a> </li>
 <li> <a href=https://discord.gg/9eHjheQ6mU target="_blank">Discord</a></li>
