--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head class=”index”>
         <title>Welcome To Project Echo</title>
         <link rel="shortcut icon" href="Images/download-favicon.jpg">
-        <link real="stylesheet" type="text/css" href="style.css"/>
+        <link rel="stylesheet" type="text/css" href="style.css"/>
         <script src="script.js"></script>
     </head>
     <body>
