--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <br><br><br>
 
-<h3 class=”lefttext”>Sources</h3>
+<h3 class=”table”>Sources</h3>
 <ul>
 <li> <a href=https://github.com/PR0G4M3R target="_blank">Github</a> </li>
 <li> <a href=https://discord.gg/9eHjheQ6mU target="_blank">Discord</a></li>
