--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
    <img src="Images/IMG-3281.GIF" alt="Echo Logo" width="250" height="200" class="left"> 
       <br><br><br><br><br><br><br><br>
    
-<h3 class=”center”> What is Project Echo?</h3>
+   <class=”center”>
+<h3> What is Project Echo?</h3>
 <p> TYPE HERE
-    </p>
+    </p> </class>
 
 <br><br><br>
 
