--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
       <br><br><br><br><br><br><br><br>
    
 
-<h3 class=”center”> What is Project Echo?</h3>
-<p class=”center”> TYPE HERE
+<h3> What is Project Echo?</h3>
+<p> TYPE HERE
     </p>
 
 <br><br><br>
 
-<h3 class=”table”>Sources</h3>
+<h3>Sources</h3>
 <ul>
 <li> <a href=https://github.com/PR0G4M3R target="_blank">Github</a> </li>
 <li> <a href=https://discord.gg/9eHjheQ6mU target="_blank">Discord</a></li>
