--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="shortcut icon" href="Images/download-favicon.jpg">
         <link rel="stylesheet" type="text/css" href="style.css"/>
         <script src="script.js"></script>
+      <h1>Welcome To Project Echo</h1>
     </head>
     <body>
     
