--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="style.css"/>
         <script src="script.js"></script>
       <img src="Images/IMG-3281.GIF" alt="Echo Logo" width="250" height="200" class="logo"> 
-      <h1>Welcome To Project Echo</h1>
+      <h1 class=”title”> Welcome To Project Echo</h1>
          
     </head>
     <body>
