--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "en">
      
-    <head class=”index”>
+    <head>
         <title>Welcome To Project Echo</title>
         <link rel="shortcut icon" href="Images/download-favicon.jpg">
         <link rel="stylesheet" type="text/css" href="style.css"/>
