--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 
 <br><br><br>
 
-<h3>Sources</h3>
+<h3>Media</h3>
 <ul>
 <li> <a href=https://github.com/PR0G4M3R target="_blank">Github</a> </li>
 <li> <a href=https://discord.gg/9eHjheQ6mU target="_blank">Discord</a></li>
-<li> </li>
-<li> </li>
+<li> <a href=</a> </li>
+<li> <a href=</a> </li>
 </ul>
     </body>
     
