--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 <ul>
 <li> <a href=https://github.com/PR0G4M3R target="_blank">Github</a> </li>
 <li> <a href=https://discord.gg/9eHjheQ6mU target="_blank">Discord</a></li>
-<li> <a href=</a> </li>
-<li> <a href=</a> </li>
+<li> <a href=></a> </li>
+<li> <a href=></a> </li>
 </ul>
     </body>
     
