--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <ul>
 <li> <a href=https://github.com/PR0G4M3R target="_blank">Github</a> </li>
 <li> <a href=https://discord.gg/9eHjheQ6mU target="_blank">Discord</a></li>
-<li> <a href=></a> </li>
+<li> <a href=https://www.tiktok.com/@pr0g4m3r_og target="_blank">TikTok</a> </li>
 <li> <a href=></a> </li>
 </ul>
 <footer>
