--- a/index.html
+++ b/index.html
@@ -21,7 +21,23 @@
 <br/>
 <br/>
 <h3>What is Project Echo?</h3>
-<p>TYPE HERE</p>
+<p>Project Echo is a multi-phase project I started using my coding skills.</p>
+<h2>It consist if three phases:</h2>
+<table style=”width:400px”>
+   <tr>
+      <th>Phase 1:</th>
+      <th>Phase 2:</th>
+      <th>Phase 3:</th>
+      <th>Phase 4:</th>
+      </tr>
+   <tr>
+      <td>Text Here</td>
+      <td>Text Here</td>
+      <td>Text Here</td>
+      <td>Text Here</td>
+      </tr>
+   
+</table>
 <br/>
 <br/>
 <br/>
