--- a/index.html
+++ b/index.html
@@ -41,13 +41,18 @@
 <br/>
 <br/>
 <br/>
-<h3>Media</h3>
-<ul>
-<li> <a href=https://github.com/PR0G4M3R target="_blank">Github</a> </li>
-<li> <a href=https://discord.gg/9eHjheQ6mU target="_blank">Discord</a></li>
-<li> <a href=https://www.tiktok.com/@pr0g4m3r_og target="_blank">TikTok</a> </li>
-<li> <a href=></a> </li>
-</ul>
+<div class="row">
+    <div class="column1" style="background-color:#aaa;">
+      <h2>Media</h2>
+  <ul>
+  <li> <a href=https://github.com/PR0G4M3R target="_blank">Github</a> </li>
+  <li> <a href=https://discord.gg/9eHjheQ6mU target="_blank">Discord</a></li>
+  <li> <a href=https://www.tiktok.com/@pr0g4m3r_og target="_blank">TikTok</a> </li>
+  <li> <a href=></a> </li>
+  </ul>
+  
+  <h4>More Coming Soon!</h4>
+    </div>
 <footer>
   <h4>© Project Echo 2023, all rights reserved.</h4>
 <footer>
