--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <br/>
 <br/>
 <div class="row">
-    <div class="column1" style="background-color:#aaa;">
+    <div class="column1">
       <h2>Media</h2>
   <ul>
   <li> <a href=https://github.com/PR0G4M3R target="_blank">Github</a> </li>
