--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 <br/>
 <br/>
 <h3>What is Project Echo?</h3>
+<div class="row">
+    <div class="column1">
 <p>Project Echo is a multi-phase project I started using my coding skills.</p>
 <h2>It consist if three phases:</h2>
 <table style=”width:400px”>
@@ -38,6 +40,7 @@
       </tr>
    
 </table>
+</div>
 <br/>
 <br/>
 <br/>
