--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="column1">
 <p>Project Echo is a multi-phase project I started using my coding skills.</p>
 <h2>It consist if three phases:</h2>
-<table style=”width:400px”>
+<table style="width:400px">
    <tr>
       <th>Phase 1:</th>
       <th>Phase 2:</th>
