--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div class="row">
     <div class="column1">
 <p>Project Echo is a multi-phase project I started using my coding skills.</p>
-<h2>It consist if three phases:</h2>
+<h2>It consists of three phases:</h2>
 <table style="width:400px">
    <tr>
       <th>Phase 1:</th>
@@ -33,10 +33,10 @@
       <th>Phase 4:</th>
       </tr>
    <tr>
-      <td>Text Here</td>
-      <td>Text Here</td>
-      <td>Text Here</td>
-      <td>Text Here</td>
+      <td>Online Presence</td>
+      <td>Discord Bot</td>
+      <td>Desktop Application</td>
+      <td>Mobile Application</td>
       </tr>
    
 </table>
