--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div class="row">
     <div class="column2">
 <p>Project Echo is a multi-phase project I started using my coding skills.</p>
-<h2>It consists of three phases:</h2>
+<h2>It consists of four phases:</h2>
 <table style="width:400px">
    <tr>
       <th>Phase 1:</th>
@@ -40,6 +40,8 @@
       </tr>
    
 </table>
+
+<h2>I am are currently on phase 1, but hope to move to the next phase soon.</h2>
 </div>
 <br/>
 <br/>
