--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>Welcome To Project Echo</title>
@@ -7,28 +6,41 @@
     <script src="script.js"></script>
   </head>
 
-  <body>
-    <img
-      src="Images/IMG-3281.GIF"
+<div class="container">
+  <div class="cell cell-1">
+     <img src="Images/IMG-3281.GIF"
       alt="Echo Logo"
-      width="250"
-      height="200"
+      width="100"
+      height="auto"
       class="logo"
     />
-    <h1 class="”title”">Welcome To Project Echo</h1>
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <h3>What is Project Echo?</h3>
+  </div>
+  <div class="cell cell-2">
+    <h2 class="”title”"> 
+     Welcome To <br> Project Echo
+    </h2>
+  </div>
+          <ul>
+          <li>
+            <a href="https://github.com/PR0G4M3R" target="_blank">Github</a>
+          </li>
+    </li>
+          <li>
+            <a href="https://discord.gg/9eHjheQ6mU" target="_blank">Discord</a>
+          </li>
+          <li>
+            <a href="https://www.tiktok.com/@pr0g4m3r_og" target="_blank"
+              >TikTok</a
+            >
+          </li>
+        </ul>
+
+        <h4>More Coming Soon!</h4>
+    </div>
+  <div class="cell cell-5">
+        <h3>What is Project Echo?</h3>
     <div class="row">
-      <div class="column2">
-        <p>
-          Project Echo is a multi-phase project I started using my coding
+              Project Echo is a multi-phase project I started using my coding
           skills.
         </p>
         <h2>It consists of four phases:</h2>
@@ -46,38 +58,15 @@
             <td>Mobile Application</td>
           </tr>
         </table>
-
+        
+        
         <h2>
           I am are currently on phase 1, but hope to move to the next phase
           soon.
         </h2>
-      </div>
     </div>
-    <br />
-    <br />
-    <br />
-    <div class="row">
-      <div class="column1">
-        <h2>Media</h2>
-        <ul>
-          <li>
-            <a href="https://github.com/PR0G4M3R" target="_blank">Github</a>
-          </li>
-          <li>
-            <a href="https://discord.gg/9eHjheQ6mU" target="_blank">Discord</a>
-          </li>
-          <li>
-            <a href="https://www.tiktok.com/@pr0g4m3r_og" target="_blank"
-              >TikTok</a
-            >
-          </li>
-        </ul>
-
-        <h4>More Coming Soon!</h4>
-      </div>
-    </div>
-    <footer>
-      <h4>© Project Echo 2023, all rights reserved.</h4>
-    </footer>
-  </body>
-</html>
+  <div class="cell cell-6">6.</div>
+  <div class="cell cell-7">7.</div>
+  <div class="cell cell-8">8.</div>
+  <div class="cell cell-9">9.</div> 
+</div>
