--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
           soon.
         </h2>
     </div>
+    </div>
   <div class="cell cell-6">6.</div>
   <div class="cell cell-7">7.</div>
   <div class="cell cell-8">8.</div>
