--- a/index.html
+++ b/index.html
@@ -1,73 +1,57 @@
-<html lang="en">
-  <head>
-    <title>Welcome To Project Echo</title>
-    <link rel="shortcut icon" href="Images/download-favicon.jpg" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <script src="script.js"></script>
-  </head>
-
 <div class="container">
   <div class="cell cell-1">
-     <img src="Images/IMG-3281.GIF"
-      alt="Echo Logo"
-      width="100"
-      height="auto"
-      class="logo"
-    />
+    <img src="Images/IMG-3281.GIF" alt="Echo Logo" width="100" height="auto" class="logo" />
   </div>
   <div class="cell cell-2">
-    <h2 class="”title”"> 
-     Welcome To <br> Project Echo
+    <h2 class="”title”">
+      Welcome To Project Echo
     </h2>
   </div>
-          <ul>
-          <li>
-            <a href="https://github.com/PR0G4M3R" target="_blank">Github</a>
-          </li>
-    </li>
-          <li>
-            <a href="https://discord.gg/9eHjheQ6mU" target="_blank">Discord</a>
-          </li>
-          <li>
-            <a href="https://www.tiktok.com/@pr0g4m3r_og" target="_blank"
-              >TikTok</a
-            >
-          </li>
-        </ul>
-
-        <h4>More Coming Soon!</h4>
-    </div>
-  <div class="cell cell-5">
-        <h3>What is Project Echo?</h3>
-    <div class="row">
-              Project Echo is a multi-phase project I started using my coding
-          skills.
-        </p>
-        <h2>It consists of four phases:</h2>
-        <table style="width: 400px">
-          <tr>
-            <th>Phase 1:</th>
-            <th>Phase 2:</th>
-            <th>Phase 3:</th>
-            <th>Phase 4:</th>
-          </tr>
-          <tr>
-            <td>Online Presence</td>
-            <td>Discord Bot</td>
-            <td>Desktop Application</td>
-            <td>Mobile Application</td>
-          </tr>
-        </table>
-        
-        
-        <h2>
-          I am are currently on phase 1, but hope to move to the next phase
-          soon.
-        </h2>
-    </div>
-    </div>
-  <div class="cell cell-6">6.</div>
+  <div class="cell cell-3">
+    <ul>
+      <li>
+        <a href="https://github.com/PR0G4M3R" target="_blank">Github</a>
+      </li>
+      </li>
+      <li>
+        <a href="https://discord.gg/9eHjheQ6mU" target="_blank">Discord</a>
+      </li>
+      <li>
+        <a href="https://www.tiktok.com/@pr0g4m3r_og" target="_blank">TikTok</a>
+      </li>
+    </ul>
+  </div>
+  <div class="cell cell-4">
+    <h3>What is Project Echo?</h3>
+  </div>
+  <div class="cell cell-5">5.</div>
+  <div class="cell cell-6">
+    <p>
+      Project Echo is a multi-phase project I started using my coding
+      skills.
+    </p>
+    <h2>It consists of four phases:</h2>
+    <table style="width: 400px">
+      <tr>
+        <th>Phase 1:</th>
+        <th>Phase 2:</th>
+        <th>Phase 3:</th>
+        <th>Phase 4:</th>
+      </tr>
+      <tr>
+        <td>Online Presence</td>
+        <td>Discord Bot</td>
+        <td>Desktop Application</td>
+        <td>Mobile Application</td>
+      </tr>
+    </table>
+      <h2>
+    I am currently on phase 1, but hope to move to the next phase
+    soon.
+  </h2>
+  </div>
   <div class="cell cell-7">7.</div>
   <div class="cell cell-8">8.</div>
-  <div class="cell cell-9">9.</div> 
+</div>
+<div class="footer">
 </div>
