--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!DOCTYPE HTML>
+<head>
+  <link rel="stylesheet" href="style.css">
+</head>
+
 <div class="container">
   <div class="cell cell-1">
     <img src="Images/IMG-3281.GIF" alt="Echo Logo" width="100" height="auto" class="logo" />
