--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <p>
       Project Echo is a multi-phase project I started using my coding
       skills.
-    </p>
+          </p>
     <h2>It consists of four phases:</h2>
     <table style="width: 400px">
       <tr>
@@ -50,13 +50,10 @@
         <td>Mobile Application</td>
       </tr>
     </table>
-      <h2>
-    I am currently on phase 1, but hope to move to the next phase
-    soon.
-  </h2>
   </div>
   <div class="cell cell-7">7.</div>
   <div class="cell cell-8">8.</div>
 </div>
 <div class="footer">
+  © Project Echo 2023
 </div>
