--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <img src="Images/IMG-3281.GIF" alt="Echo Logo" width="100" height="auto" class="logo" />
   </div>
   <div class="cell cell-2">
-    <h2 class="”title”">
+    <h2 class="title">
       Welcome To Project Echo
     </h2>
   </div>
