--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <head>
   <link rel="stylesheet" href="style.css">
+  <link rel=”script” href=”script.js”>
 </head>
 
 <div class="container">
