--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <head>
   <link rel="stylesheet" href="style.css">
-  <link rel="script" href="script.js">
+  <script src="script.js"></script>
 </head>
 
 <div class="container">
