--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
         <th>Phase 4:</th>
       </tr>
       <tr>
-        <td>Online Presence</td><br>
-        <td>Discord Bot</td><br>
-        <td>Desktop Application</td><br>
-        <td>Mobile Application</td><br>
+        <td>Online Presence</td>
+        <td>Discord Bot</td>
+        <td>Desktop Application</td>
+        <td>Mobile Application</td>
       </tr>
     </table>
   </div>
