--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       Project Echo is a multi-phase project I started using my coding
       skills.
           </p>
-    <h2>It consists of four phases:</h2>
+    <h2>It consists of four phases:
     <table style="width: 500px">
       <tr>
         <th>Phase 1:</th>
@@ -52,6 +52,7 @@
         <td>Mobile Application</td>
       </tr>
     </table>
+    </h2>
   </div>
   <div class="cell cell-7">7.</div>
   <div class="cell cell-8">8.</div>
