--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
+<!-- What are you looking at? :O -->
 <head>
   <title> Project Echo </title>
   <link rel="stylesheet" href="style.css">
@@ -7,7 +8,7 @@
 
 <div class="container">
   <div class="cell cell-1">
-    <img src="Images/IMG-3281.GIF" alt="Echo Logo" width=”250” height="auto"/>
+    <img src="Images/IMG-3281.GIF" alt="Echo Logo" width=”200” height="auto"/>
   </div>
   <div class="cell cell-2">
     <h2 class="title">
