--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </p>
           <br>
     <h4>It consists of four phases:
-    <table style="width: 300px">
+    <table>
       <tr>
         <th>Phase 1:</th>
         <th>Phase 2:</th>
