--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <div class="container">
   <div class="cell cell-1">
-    <img src="Images/IMG-3281.GIF" alt="Echo Logo" width=”200” height="auto"/>
+    <img src="Images/IMG-3281.GIF" alt="Echo Logo" max_width=”40%” max_height="auto" width="auto"/>
   </div>
   <div class="cell cell-2">
     <h2 class="title">
