--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
+<body>
 <div class="container">
   <div class="cell cell-1">
     <img src="Images/IMG-3281.GIF" alt="Echo Logo" max_width=”40%” max_height="auto" width="auto"/>
@@ -63,5 +64,7 @@
   <div class="cell cell-8">8.</div>
 </div>
 <div class="footer">
- <p>© Project Echo 2023</p>
+  <p>&copy; Project Echo 2023</p>
 </div>
+</body>
+</html>
