--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div class="container">
   <div class="cell cell-1">
-    <img src="Images/IMG-3281.GIF" alt="Echo Logo" max_width=”40%” max_height="auto" width="auto"/>
+    <img src="Images/IMG-3281.GIF" alt="Echo Logo" class="Logo"/>
   </div>
   <div class="cell cell-2">
     <h1 class="title">
