--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 <body>
 <div class="container">
   <div class="cell cell-1">
-    <img src="Images/IMG-3281.GIF" alt="Echo Logo" class="Logo"/>
+    <img src="Images/IMG-3281.GIF" alt="Echo Logo" max_width=”40%” max_height="auto" width="auto"/>
   </div>
   <div class="cell cell-2">
-    <h1 class="title">
+    <h2 class="title">
       Welcome To Project Echo
-    </h1>
+    </h2>
   </div>
   <div class="cell cell-3">
+    <h3>
     <ul>
       <li>
         <a href="https://github.com/PR0G4M3R" target="_blank">Github</a>
@@ -30,20 +31,20 @@
         <a href="https://www.tiktok.com/@pr0g4m3r_og" target="_blank">TikTok</a>
       </li>
     </ul>
-  </div>
-  <div class="cell cell-4">
-    <h5>What is Project Echo?</h5>
-  </div>
-  <div class="cell cell-5">5.</div>
-  <div class="cell cell-6">
-    <p> 
-    <h3>
-      Project Echo is a multi-phase project I started using my coding
-      skills. 
     </h3>
-          </p>
-          <br>
-    <h4>It consists of four phases:
+  </div>
+
+  <div class="cell cell-4">
+    <h3>What is Project Echo?</h3>
+  </div>
+
+  <div class="cell cell-5">5.</div>
+
+  <div class="cell cell-6">
+
+<h3>
+      Project Echo is a multi-phase project I started using my coding
+      skills. <br> It consists of four phases:
     <table>
       <tr>
         <th>Phase 1:</th>
@@ -58,13 +59,17 @@
         <td>Mobile Application</td>
       </tr>
     </table>
-    </h4>
+    </h3>
   </div>
+
   <div class="cell cell-7">7.</div>
+
   <div class="cell cell-8">8.</div>
 </div>
+
 <div class="footer">
   <p>&copy; Project Echo 2023</p>
 </div>
+
 </body>
 </html>
