--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <title> Project Echo </title>
   <link rel="stylesheet" href="style.css">
+  
+   <link rel="icon" type="image/x-icon" href="/images/IMG-3281.GIF">
   <script src="script.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
