--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
     <img src="Images/IMG-3281.GIF" alt="Echo Logo" max_width=”40%” max_height="auto" width="auto"/>
   </div>
   <div class="cell cell-2">
-    <h2 class="title1">
+    <div class="title1">
       Welcome To 
-    </h2>
-    <h2 class="title2">
+    </div>
+    <div class="title2">
      Project Echo
-    </h2>
+    </div>
   </div>
+
   <div class="cell cell-3">
     <h3>
     <ul>
