--- a/index.html
+++ b/index.html
@@ -14,13 +14,9 @@
   <div class="cell cell-1">
     <img src="Images/IMG-3281.GIF" alt="Echo Logo" max_width=”40%” max_height="auto" width="auto"/>
   </div>
+
   <div class="cell cell-2">
-    <div class="title1">
-      Welcome To 
-    </div>
-    <div class="title2">
-     Project Echo
-    </div>
+    Welcome To Project Echo
   </div>
 
   <div class="cell cell-3">
