--- a/index.html
+++ b/index.html
@@ -14,34 +14,23 @@
   <div class="cell cell-1">
     <img src="Images/IMG-3281.GIF" alt="Echo Logo" max_width=”40%” max_height="auto" width="auto"/>
   </div>
-
+  
   <div class="cell cell-2">
-    Welcome To Project Echo
+    <div class="title1">
+      Welcome To 
+    </div>
+    <div class="title2">
+     Project Echo
+    </div>
   </div>
 
+ 
   <div class="cell cell-3">
-    <h3>
-    <ul>
-      <li>
-        <a href="https://github.com/PR0G4M3R" target="_blank">Github</a>
-      </li>
-      </li>
-      <li>
-        <a href="https://discord.gg/9eHjheQ6mU" target="_blank">Discord</a>
-      </li>
-      <li>
-        <a href="https://www.tiktok.com/@pr0g4m3r_og" target="_blank">TikTok</a>
-      </li>
-    </ul>
-    </h3>
-  </div>
-
-  <div class="cell cell-4">
     <h3>What is Project Echo?</h3>
     </div>
    
 
-  <div class="cell cell-6">
+  <div class="cell cell-4">
     <h3>
       Project Echo is a multi-phase project I started using my coding
       skills. <br> It consists of four phases:
@@ -62,9 +51,15 @@
     </h3>
   </div>
 
-  <div class="cell cell-7">7.</div>
+  <div class="cell cell-5">
+    <h3>
+      <a href="https://github.com/PR0G4M3R" target="_blank">Github</a>
+      <a href="https://discord.gg/9eHjheQ6mU" target="_blank">Discord</a>
+      <a href="https://www.tiktok.com/@pr0g4m3r_og" target="_blank">TikTok</a>
+    </h3>
+  </div>
 
-  <div class="cell cell-8">8.</div>
+  <div class="cell cell-6">6.</div>
 </div>
 
 <div class="footer">
@@ -73,3 +68,4 @@
 
 </body>
 </html>
+
