--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </div>
   </div>
 
+<br>
  
   <div class="cell cell-3">
     <h3>What is Project Echo?</h3>
@@ -33,34 +34,33 @@
   <div class="cell cell-4">
     <h3>
       Project Echo is a multi-phase project I started using my coding
-      skills. <br> It consists of four phases:
-    <table>
-      <tr>
-        <th>Phase 1:</th>
-        <th>Phase 2:</th>
-        <th>Phase 3:</th>
-        <th>Phase 4:</th>
-      </tr>
-      <tr>
-        <td>Online Presence</td>
-        <td>Discord Bot</td>
-        <td>Desktop Application</td>
-        <td>Mobile Application</td>
-      </tr>
-    </table>
+      skills. 
+      <br> 
+      
+    It consists of four phases:
+    <div class="table">
+     <div class="row-1">Phase 1: Online Presence</div>
+     <div class="row-2">Phase 2: Discord Bot</div>
+     <div class="row-3">Phase 3: Desktop Application</div>
+     <div class="row-4">Phase 4: Mobile Application</div>
+     <div class="row-5"></div>
+    </div>
     </h3>
   </div>
+
+<br>
 
   <div class="cell cell-5">
     <h3>
       <a href="https://github.com/PR0G4M3R" target="_blank">Github</a>
+      <br>
       <a href="https://discord.gg/9eHjheQ6mU" target="_blank">Discord</a>
+      <br>
       <a href="https://www.tiktok.com/@pr0g4m3r_og" target="_blank">TikTok</a>
     </h3>
   </div>
 
-  <div class="cell cell-6">6.</div>
-</div>
+<br> 
 
 <div class="footer">
   <p>&copy; Project Echo 2023</p>
