--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
-<!DOCTYPE HTML>
-<!-- What are you looking at? :O -->
 <head>
   <title> Project Echo </title>
   <link rel="stylesheet" href="style.css">
   
    <link rel="icon" type="image/x-icon" href="/images/IMG-3281.GIF">
-  <script src="script.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -38,13 +35,12 @@
       <br> 
       
     It consists of four phases:
-    <div class="table">
-     <div class="row-1">Phase 1: Online Presence</div>
-     <div class="row-2">Phase 2: Discord Bot</div>
-     <div class="row-3">Phase 3: Desktop Application</div>
-     <div class="row-4">Phase 4: Mobile Application</div>
-     <div class="row-5"></div>
-    </div>
+          <p>
+     Phase 1: Online Presence <br>
+     Phase 2: Discord Bot <br>
+     Phase 3: Desktop Application <br>
+     Phase 4: Mobile Application <br>
+    </p>
     </h3>
   </div>
 
@@ -53,9 +49,7 @@
   <div class="cell cell-5">
     <h3>
       <a href="https://github.com/PR0G4M3R" target="_blank">Github</a>
-      <br>
       <a href="https://discord.gg/9eHjheQ6mU" target="_blank">Discord</a>
-      <br>
       <a href="https://www.tiktok.com/@pr0g4m3r_og" target="_blank">TikTok</a>
     </h3>
   </div>
@@ -65,7 +59,6 @@
 <div class="footer">
   <p>&copy; Project Echo 2023</p>
 </div>
-
+</div>
 </body>
 </html>
-
