--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
-<!DOCTYPE HTML>
-<!-- What are you looking at? :O -->
 <head>
   <title> Project Echo </title>
   <link rel="stylesheet" href="style.css">
   
    <link rel="icon" type="image/x-icon" href="/images/IMG-3281.GIF">
-  <script src="script.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -14,62 +11,54 @@
   <div class="cell cell-1">
     <img src="Images/IMG-3281.GIF" alt="Echo Logo" max_width=”40%” max_height="auto" width="auto"/>
   </div>
-
+  
   <div class="cell cell-2">
-    Welcome To Project Echo
+    <div class="title1">
+      Welcome To 
+    </div>
+    <div class="title2">
+     Project Echo
+    </div>
   </div>
 
+<br>
+ 
   <div class="cell cell-3">
-    <h3>
-    <ul>
-      <li>
-        <a href="https://github.com/PR0G4M3R" target="_blank">Github</a>
-      </li>
-      </li>
-      <li>
-        <a href="https://discord.gg/9eHjheQ6mU" target="_blank">Discord</a>
-      </li>
-      <li>
-        <a href="https://www.tiktok.com/@pr0g4m3r_og" target="_blank">TikTok</a>
-      </li>
-    </ul>
-    </h3>
-  </div>
-
-  <div class="cell cell-4">
     <h3>What is Project Echo?</h3>
     </div>
    
 
-  <div class="cell cell-6">
+  <div class="cell cell-4">
     <h3>
       Project Echo is a multi-phase project I started using my coding
-      skills. <br> It consists of four phases:
-    <table>
-      <tr>
-        <th>Phase 1:</th>
-        <th>Phase 2:</th>
-        <th>Phase 3:</th>
-        <th>Phase 4:</th>
-      </tr>
-      <tr>
-        <td>Online Presence</td>
-        <td>Discord Bot</td>
-        <td>Desktop Application</td>
-        <td>Mobile Application</td>
-      </tr>
-    </table>
+      skills. 
+      <br> 
+      
+    It consists of four phases:
+          <p>
+     Phase 1: Online Presence <br>
+     Phase 2: Discord Bot <br>
+     Phase 3: Desktop Application <br>
+     Phase 4: Mobile Application <br>
+    </p>
     </h3>
   </div>
 
-  <div class="cell cell-7">7.</div>
+<br>
 
-  <div class="cell cell-8">8.</div>
-</div>
+  <div class="cell cell-5">
+    <h3>
+      <a href="https://github.com/PR0G4M3R" target="_blank">Github</a>
+      <a href="https://discord.gg/9eHjheQ6mU" target="_blank">Discord</a>
+      <a href="https://www.tiktok.com/@pr0g4m3r_og" target="_blank">TikTok</a>
+    </h3>
+  </div>
+
+<br> 
 
 <div class="footer">
   <p>&copy; Project Echo 2023</p>
 </div>
-
+</div>
 </body>
 </html>
