--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <h2 class="title2">
      Project Echo
     </h2>
+  <div class="cell cell-2.5">
+    <img src="Images/Logo.gif" alt="PR0G4M3R Logo" max_width="40%" max_height="auto" width="auto"/> 
+  </div>
   </div>
   <div class="cell cell-3">
     <h3>
