--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div class="title2">
      Project Echo
     </div>
-  <div class="cell cell-2.5">
-    <img src="Images/Logo.gif" alt="PR0G4M3R Logo" max_width="40%" max_height="auto" width="auto"/> 
+  <div class="cell cell-2B">
+    <img src="Images/Logo.gif" alt="PR0G4M3R Logo" max_width="50%" max_height="auto" width="auto"/> 
   </div>
   </div>
 
