--- a/index.html
+++ b/index.html
@@ -1,67 +1,70 @@
-<head>
-  <title> Project Echo </title>
-  <link rel="stylesheet" href="style.css">
-  
-   <link rel="icon" type="image/x-icon" href="/images/IMG-3281.GIF">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PR0G4M3R's Portfolio Page</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- Add favicon -->
+  </head>
+  <body>
+    <!-- Navbar and logos -->
+    <section class="navbarContainer">
+      <div class="leftLogo">
+        <img src="/images/leftlogo.gif"/>
+      </div>
+      <div class="rightLogo">
+        <img src="/Images/rightlogo.gif" />
+      </div>
+    </section>
+    <nav class="navbar">
+      <ul>
+        <li>
+          <a href="/index.html">
+            <span>Home</span>
+          </a>
+        </li>
+        <li>
+          <a href="/index.html#projects">
+            <span>Projects</span>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <span>Team</span>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <span>Contacts</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
 
-<body>
-<div class="container">
-  <div class="cell cell-1">
-    <img src="Images/IMG-3281.GIF" alt="Echo Logo" max_width=”40%” max_height="auto" width="auto"/>
-  </div>
-  
-  <div class="cell cell-2">
-    <div class="title1">
-      Welcome To 
-    </div>
-    <div class="title2">
-     Project Echo
-    </div>
-  <div class="cell cell-2B">
-    <img src="Images/Logo.gif" alt="PR0G4M3R Logo" max_width="50%" max_height="auto" width="auto"/> 
-  </div>
-  </div>
+    <!-- Hero Section -->
+    <section class="heroSection">
+      <h1>Welcome to Echo AI</h1>
+    </section>
 
-<br>
- 
-  <div class="cell cell-3">
-    <h3>What is Project Echo?</h3>
-    </div>
-   
+    <!-- Projects Section -->
+    <section class="projectsInfo" id="projects">
+      <p>What is Project Echo?</p>
+      <p class="projectDesc">
+        Project Echo is a coding project that I started using my coding
+        skills (and help). It involves multiple stages.
+        <a href="/Pages/projectEcho.html">Learn more</a>
+      </p>
+    </section>
 
-  <div class="cell cell-4">
-    <h3>
-      Project Echo is a multi-phase project I started using my coding
-      skills. 
-      <br> 
-      
-    It consists of four phases:
-          <p>
-     Phase 1: Online Presence <br>
-     Phase 2: Discord Bot <br>
-     Phase 3: Desktop Application <br>
-     Phase 4: Mobile Application <br>
-    </p>
-    </h3>
-  </div>
+    <!-- Social links -->
+    <section class="socialSection">
 
-<br>
+    </section>
 
-  <div class="cell cell-5">
-    <h3>
-      <a href="https://github.com/PR0G4M3R" target="_blank">Github</a>
-      <a href="https://discord.gg/9eHjheQ6mU" target="_blank">Discord</a>
-      <a href="https://www.tiktok.com/@pr0g4m3r_og" target="_blank">TikTok</a>
-    </h3>
-  </div>
-
-<br> 
-
-<div class="footer">
-  <p>&copy; Project Echo 2023</p>
-</div>
-</div>
-</body>
+    <footer>
+      <p>&copy; Project Echo 2023</p>
+    </footer>
+  </body>
 </html>
