--- a/Pages/team.html
+++ b/Pages/team.html
@@ -4,6 +4,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Team</title>
+    <title>Contacts</title>
     <link rel="stylesheet" href="../style.css">
+<!-- Add favicon -->
+</head>
+<body>
+  <!-- Navbar and logos -->
+  <div class="navbarContainer">
+    <div class="leftLogo">
+      <img src="/images/leftlogo.gif"/>
+    </div>
+    <div class="navbar">
+      <ul>
+        <li>
+          <a href="/index.html">
+            <span>Home</span>
+          </a>
+        </li>
+        <li>
+          <a href="/index.html#projects">
+            <span>Projects</span>
+          </a>
+        </li>
+        <li>
+          <a href="/Pages/team.html">
+            <span>Team</span>
+          </a>
+        </li>
+        <li>
+          <a href="/Pages/contacts.html">
+            <span>Contacts</span>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="rightLogo">
+      <img src="/Images/rightlogo.gif" />
+    </div>
+  </div>
+  <section class="projectsInfo">
+    <p class="projectDesc">
+     Just me rn :p
+    </p>
+  </section>  
+  <footer class="footer">
+    <p>&copy; Echo AI 2023</p>
+  </footer>
+</body>
+</html>
 
