--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="/Pages/team.html">
             <span>Team</span>
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="/Pages/contacts.html">
             <span>Contacts</span>
           </a>
         </li>
@@ -63,8 +63,8 @@
 
     </section>
 
-    <footer>
-      <p>&copy; Project Echo 2023</p>
+    <footer class="footer">
+      <p>&copy; Echo AI 2023</p>
     </footer>
   </body>
 </html>
