--- a/Pages/projectEcho.html
+++ b/Pages/projectEcho.html
@@ -27,12 +27,12 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="/Pages/team.html">
               <span>Team</span>
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="/Pages/contacts.html">
               <span>Contacts</span>
             </a>
           </li>
@@ -56,5 +56,9 @@
         I hope to be moving on soon.
       </p>
     </section>
+    <br>
+    <footer class="footer">
+      <p>&copy; Echo AI 2023</p>
+    </footer>
   </body>
 </html>
