--- a/Pages/projectEcho.html
+++ b/Pages/projectEcho.html
@@ -12,7 +12,7 @@
     <!-- Navbar and logos -->
     <div class="navbarContainer">
       <div class="leftLogo">
-        <img src="/images/leftlogo.gif"/>
+        <img src="/Images/leftlogo.gif"/>
       </div>
       <div class="navbar">
         <ul>
