--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Navbar and logos -->
     <section class="navbarContainer">
       <div class="leftLogo">
-        <img src="/images/leftlogo.gif"/>
+        <img src="/Images/leftlogo.gif"/>
       </div>
     <nav class="navbar">
       <ul>
