--- a/Pages/projectEcho.html
+++ b/Pages/projectEcho.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Echo</title>
     <link rel="stylesheet" href="../style.css">
-    <!-- Add favicon -->
+    <link rel="icon" type="image/x-icon" href="/Images/leftlogo.gif">
   </head>
   <body>
     <!-- Navbar and logos -->
