--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PR0G4M3R's Portfolio Page</title>
     <link rel="stylesheet" href="style.css">
-    <!-- Add favicon -->
+    <link rel="icon" type="image/x-icon" href="/Images/leftlogo.gif">
   </head>
   <body>
     <!-- Navbar and logos -->
