--- a/Pages/projectEcho.html
+++ b/Pages/projectEcho.html
@@ -52,8 +52,10 @@
         Stage 3: Desktop App<br/>
         Stage 4: Mobile App<br/>
         <br/><br/>
-        As of June 3, 2023 the project is on Stage 1.<br>
-        I hope to be moving on soon.
+        As of June 3, 2023, the project was on Stage 1.<br>
+        It is now July 8, 2023, and the project is at the beginning of Stage 2.<br>
+        Here is a link to the main web page: <a href=https://echo-ai--adriansurkovic.repl.co/>Dashboard</a><br>
+        Please note that as Stage 2 has just started the page may not always be online.
       </p>
     </section>
     <br>
