--- a/Pages/projectEcho.html
+++ b/Pages/projectEcho.html
@@ -54,7 +54,7 @@
         <br/><br/>
         As of June 3, 2023, the project was on Stage 1.<br>
         It is now July 8, 2023, and the project is at the beginning of Stage 2.<br>
-        Here is a link to the main web page: <a href="https://echo-ai--adriansurkovic.repl.co/", target=_blank>Dashboard</a><br>
+        Here is a link to the main web page: <a href="https://echo-ai--adriansurkovic.repl.co/", target="_blank">Dashboard</a><br>
         Please note that as Stage 2 has just started the page may not always be online.
       </p>
     </section>
