--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
   <body>
     <!-- Navbar and logos -->
     <section class="navbarContainer">
-      <div class="leftLogo">
-        <img src="/Images/leftlogo.gif"/>
-      </div>
     <nav class="navbar">
       <ul>
         <li>
@@ -22,15 +19,11 @@
           </a>
         </li>
         <li>
-          <a href="/index.html#projects">
-            <span>Projects</span>
+          <a href="/index.html">
+            <span>Content</span>
           </a>
         </li>
         <li>
-          <a href="/Pages/team.html">
-            <span>Team</span>
-          </a>
-        </li>
         <li>
           <a href="/Pages/contacts.html">
             <span>Contacts</span>
@@ -49,13 +42,7 @@
     </section>
 
     <!-- Projects Section -->
-    <section class="projectsInfo" id="projects">
-      <p>What is Project Echo?</p>
-      <p class="projectDesc">
-        Project Echo is a coding project that I started using my coding
-        skills (and help). It involves multiple stages.
-        <a href="/Pages/projectEcho.html">Learn more</a>
-      </p>
+    <section>
     </section>
 
     <!-- Social links -->
