--- a/Pages/contacts.html
+++ b/Pages/contacts.html
@@ -11,9 +11,6 @@
 <body>
   <!-- Navbar and logos -->
   <div class="navbarContainer">
-    <div class="leftLogo">
-      <img src="/Images/leftlogo.gif"/>
-    </div>
     <div class="navbar">
       <ul>
         <li>
@@ -22,13 +19,8 @@
           </a>
         </li>
         <li>
-          <a href="/index.html#projects">
+          <a href="/index.html">
             <span>Projects</span>
-          </a>
-        </li>
-        <li>
-          <a href="/Pages/team.html">
-            <span>Team</span>
           </a>
         </li>
         <li>
