--- a/Pages/contacts.html
+++ b/Pages/contacts.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacts</title>
     <link rel="stylesheet" href="../style.css">
-    <link rel="icon" type="image/x-icon" href="/Images/leftlogo.gif">
+    <link rel="icon" type="image/x-icon" href="/Images/logo.gif">
 </head>
 <body>
   <!-- Navbar and logos -->
   <div class="navbarContainer">
     <div class="navbar">
+      <div class="Logo">
+        <img src="/Images/logo.gif"/>
+      </div>
       <ul>
         <li>
           <a href="/index.html">
@@ -30,27 +33,20 @@
         </li>
       </ul>
     </div>
-    <div class="rightLogo">
-      <img src="/Images/rightlogo.gif"/>
-    </div>
   </div>
-  <section class="projectsInfo">
-    <p class="projectDesc">
+
+  <section class="contactsInfo">
+    <p>
       Below is a list of my current contacts:
       <br/><br/>
       Steam: <a href="https://steamcommunity.com/profiles/76561199087799059/">PR0G4M3R</a><br/>
       Spotify: <a href="https://open.spotify.com/user/439gk0rvenn5ygy3uhz0bbfm2?si=a7b34eaf51d9400b">PR0G4M3R</a><br/>
-      Blizzard: Gamer5721#1392<br/>
       TikTok: <a href="https://www.tiktok.com/@pr0g4m3r_og" target="_blank">pr0g4m3r_og</a><br/>
       Github: <a href="https://github.com/PR0G4M3R" target="_blank">PR0G4M3R</a><br/>
       Youtube: <a href="https://www.youtube.com/channel/UCN46V8zuAeoXeCIK1AJpw4A" target="_blank">PR0G4M3R</a><br/>
       Discord: <a href="https://discord.gg/9eHjheQ6mU" target="_blank">PR0G4M3R's Kingdom</a><br/>
       Spam Email: <a href="https://mail.google.com/mail/u/0/" target="_blank">2020BOIGZ@gmail.com</a> <br/>
-
     </p>
   </section>
-  <footer class="footer">
-    <p>&copy; Echo AI 2023</p>
-  </footer>
 </body>
 </html>
