--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PR0G4M3R's Portfolio Page</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="/Images/leftlogo.gif">
+    <link rel="icon" type="image/x-icon" href="/Images/logo.gif">
   </head>
   <body>
     <!-- Navbar and logos -->
     <section class="navbarContainer">
     <nav class="navbar">
+      <div class="Logo">
+        <img src="/Images/logo.gif" />
+      </div>
       <ul>
         <li>
           <a href="/index.html">
@@ -19,7 +22,7 @@
           </a>
         </li>
         <li>
-          <a href="/index.html">
+          <a href="/Pages/content.html">
             <span>Content</span>
           </a>
         </li>
@@ -30,28 +33,12 @@
           </a>
         </li>
       </ul>
-      <div class="rightLogo">
-        <img src="/Images/rightlogo.gif" />
-      </div>
     </section>
     </nav>
 
     <!-- Hero Section -->
-    <section class="heroSection">
+    <section class="display">
       <h1>Welcome to Echo AI</h1>
     </section>
-
-    <!-- Projects Section -->
-    <section>
-    </section>
-
-    <!-- Social links -->
-    <section class="socialSection">
-
-    </section>
-
-    <footer class="footer">
-      <p>&copy; Echo AI 2023</p>
-    </footer>
   </body>
 </html>
