--- a/Pages/contacts.html
+++ b/Pages/contacts.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacts</title>
-    <link rel="stylesheet" href="../style.css">
+    <title>PR0G4M3R's Homepage</title>
+    <link rel="stylesheet" href="/style.css">
     <link rel="icon" type="image/x-icon" href="/Images/logo.gif">
-</head>
-<body>
-  <!-- Navbar and logos -->
-  <div class="navbarContainer">
-    <div class="navbar">
+  </head>
+  <body>
+    <!-- Navbar and logos -->
+  <div class ="topbox">
+    <section class="navbarContainer">
+    <nav class="navbar">
       <div class="Logo">
-        <img src="/Images/logo.gif"/>
+        <img src="/Images/logo.gif" />
       </div>
       <ul>
         <li>
@@ -22,8 +23,8 @@
           </a>
         </li>
         <li>
-          <a href="/index.html">
-            <span>Projects</span>
+          <a href="/Pages/content.html">
+            <span>Content</span>
           </a>
         </li>
         <li>
@@ -32,21 +33,51 @@
           </a>
         </li>
       </ul>
-    </div>
+    </nav>
+    </section>
   </div>
 
-  <section class="contactsInfo">
-    <p>
-      Below is a list of my current contacts:
-      <br/><br/>
-      Steam: <a href="https://steamcommunity.com/profiles/76561199087799059/">PR0G4M3R</a><br/>
-      Spotify: <a href="https://open.spotify.com/user/439gk0rvenn5ygy3uhz0bbfm2?si=a7b34eaf51d9400b">PR0G4M3R</a><br/>
-      TikTok: <a href="https://www.tiktok.com/@pr0g4m3r_og" target="_blank">pr0g4m3r_og</a><br/>
-      Github: <a href="https://github.com/PR0G4M3R" target="_blank">PR0G4M3R</a><br/>
-      Youtube: <a href="https://www.youtube.com/channel/UCN46V8zuAeoXeCIK1AJpw4A" target="_blank">PR0G4M3R</a><br/>
-      Discord: <a href="https://discord.gg/9eHjheQ6mU" target="_blank">PR0G4M3R's Kingdom</a><br/>
-      Spam Email: <a href="https://mail.google.com/mail/u/0/" target="_blank">2020BOIGZ@gmail.com</a> <br/>
-    </p>
-  </section>
-</body>
+  <div class="bottombox"> <!-- Hero Section -->
+    <section class="contactsInfo">
+    <ul>
+      <li>
+        Steam: <a href="https://steamcommunity.com/profiles/76561199087799059/" target="_blank">
+          PR0G4M3R
+        </a>
+      </li>
+      <li>
+        Spotify: <a href="https://open.spotify.com/user/439gk0rvenn5ygy3uhz0bbfm2?si=a7b34eaf51d9400b" target="_blank">
+          PR0G4M3R
+          </a>
+      </li>
+      <li>
+        TikTok: <a href="https://www.tiktok.com/@pr0g4m3r_og" target="_blank">
+          PR0G4M3R_OG
+          </a>
+      </li>
+      <li>
+        Github: <a href="https://github.com/PR0G4M3R" target="_blank">
+          PR0G4M3R
+          </a>
+      </li>
+      <li>
+        Youtube: <a href="https://www.youtube.com/channel/UCN46V8zuAeoXeCIK1AJpw4A" target="_blank">
+          PR0G4M3R
+          </a>
+      </li>
+      <li>
+        Discord: <a href="https://discord.gg/9eHjheQ6mU" target="_blank">
+          PR0G4M3R's Kingdom
+          </a>
+      </li>
+      <li>
+        Spam Email: <a href="https://mail.google.com/mail/u/0/" target="_blank">
+          2020BOIGZ
+          </a>
+      </li>
+    </ul>
+    </section>
+  
+  </div>
+  </body>
 </html>
