--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PR0G4M3R's Portfolio Page</title>
-    <link rel="stylesheet" href="style.css">
+    <title>PR0G4M3R's Homepage</title>
+    <link rel="stylesheet" href="/style.css">
     <link rel="icon" type="image/x-icon" href="/Images/logo.gif">
   </head>
   <body>
     <!-- Navbar and logos -->
+  <div class ="topbox">
     <section class="navbarContainer">
     <nav class="navbar">
       <div class="Logo">
@@ -27,18 +28,24 @@
           </a>
         </li>
         <li>
-        <li>
           <a href="/Pages/contacts.html">
             <span>Contacts</span>
           </a>
         </li>
       </ul>
-    </section>
     </nav>
-
-    <!-- Hero Section -->
-    <section class="display">
-      <h1>Welcome to Echo AI</h1>
     </section>
+  </div>
+
+  <div class="bottombox"> <!-- Hero Section -->
+    <section class="display">
+      <h1>Welcome to PR0G4M3R's Homepage</h1>
+    </section>
+    <p>
+      <center>
+      About Me:
+    </center>
+    </p>
+  </div>
   </body>
 </html>
