--- a/Pages/contacts.html
+++ b/Pages/contacts.html
@@ -38,7 +38,9 @@
   </div>
 
   <div class="bottombox"> <!-- Hero Section -->
+  <center>
     <section class="contactsInfo">
+    
     <ul>
       <li>
         Steam: <a href="https://steamcommunity.com/profiles/76561199087799059/" target="_blank">
@@ -76,8 +78,9 @@
           </a>
       </li>
     </ul>
-    </section>
   
+    </section>
+  </center>
   </div>
   </body>
 </html>
