--- a/index.html
+++ b/index.html
@@ -37,15 +37,51 @@
     </section>
   </div>
 
-  <div class="bottombox"> <!-- Hero Section -->
-    <section class="display">
+  <section class="display">
       <h1>Welcome to PR0G4M3R's Homepage</h1>
     </section>
-    <p>
+
       <center>
-      About Me:
-    </center>
-    </p>
-  </div>
+       <div class="aboutme"> About Me: <br><br>
+        As an avid gaming enthusiast, I dive headfirst into a rich tapestry of digital worlds and immersive experiences. <br>
+        From heart-pounding multiplayer showdowns to captivating single-player adventures, gaming isn't just a hobby for me—it's a way of life. <br>
+        I thrive on the thrill of discovery, constantly seeking out new challenges and immersing myself in the intricate narratives and gameplay mechanics that make each game unique. <br>
+        Whether I'm strategizing with friends, exploring vast virtual landscapes, or honing my skills through endless practice sessions, my dedication to gaming excellence knows no bounds. <br>
+        In every gaming community I join, I bring not only my formidable skills but also my passion for sharing experiences and connecting with fellow gamers. <br>
+        With each new game I play, I add another chapter to my ongoing adventure—one that's filled with excitement, camaraderie, and endless possibilities. <br>
+       </div>
+      </center>
+       <br>
+       <br>
+       <div class="gameslisttop">
+        My current games:
+       </div>
+      <ul class="gameslist">
+        
+        <li>
+          Crossout: PR0G4M3R_Main
+        </li>
+        <li>
+          StarMade: PR0G4M3R
+        </li>
+        <li>
+          Teardown
+        </li>
+        <li>
+          Minecraft: .PR0G4M3R8921
+        </li>
+        <li>
+          Beamng Drive
+        </li>
+        <li>
+          Asphalt 8
+        </li>
+        <li>
+          Mortal Kombat: PR0G4M3R
+        </li>
+        <li>
+
+        </li>
+      </ul>
   </body>
 </html>
