Centered ul on index

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
       </center>
        <br>
        <br>
-       <div class="gameslisttop">
+       <div class="gameslist">
         My current games:
-       </div>
-      <ul class="gameslist">
+       
+      <ul>
         
         <li>
           Crossout: PR0G4M3R_Main
@@ -83,5 +83,7 @@
 
         </li>
       </ul>
+    </div>
+
   </body>
 </html>
