Added javascript features

--- a/Pages/content.html
+++ b/Pages/content.html
@@ -7,6 +7,8 @@
     <title>PR0G4M3R's Homepage</title>
     <link rel="stylesheet" href="/style.css">
     <link rel="icon" type="image/x-icon" href="/Images/logo.gif">
+
+    <script src="/script.js"></script>
   </head>
   <body>
     <!-- Navbar and logos -->
