--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/x-icon" href="/Images/logo.gif">
   </head>
   <body>
+    <script src="/script.js"></script>
     <!-- Navbar and logos -->
   <div class ="topbox">
     <section class="navbarContainer">
