--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="PR0G4M3R's Homepage">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="PR0G4M3R's Homepage">
+    <meta property="og:description" content="Your descriptive summary here">
+    <meta property="og:image" content="URL_of_your_image">
+    <meta property="og:url" content="https://pr0g4m3r.github.io/index.html">
+    <meta property="og:type" content="website">
+
     <title>PR0G4M3R's Homepage</title>
     <link rel="stylesheet" href="/style.css">
     <link rel="icon" type="image/x-icon" href="/Images/logo.gif">
