--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="PR0G4M3R's Homepage">
-    <meta property="og:description" content="Your descriptive summary here">
-    <meta property="og:image" content="URL_of_your_image">
+    <meta property="og:description" content="My website for all my gaming content.">
+    <meta property="og:image" content="https://github.com/PR0G4M3R/pr0g4m3r.github.io/blob/main/Images/logo.gif?raw=true">
     <meta property="og:url" content="https://pr0g4m3r.github.io/index.html">
     <meta property="og:type" content="website">
 
