--- a/Pages/contacts.html
+++ b/Pages/contacts.html
@@ -12,38 +12,39 @@
   </script>
   </head>
   <body>
-    <div class ="topbox">
-      <section class="navbarContainer">
-      <nav class="navbar">
-        <div class="Logo">
-          <img src="/Images/logo.gif" />
-        </div>
-        <ul>
-          <li>
-            <a href="/index.html">
-              <span>Home</span>
+    <!-- Navbar and logos -->
+  <div class ="topbox">
+    <section class="navbarContainer">
+    <nav class="navbar">
+      <div class="Logo">
+        <img src="/Images/logo.gif" />
+      </div>
+      <ul>
+        <li>
+          <a href="/index.html">
+            <span>Home</span>
+          </a>
+        </li>
+        <li>
+          <a href="/Pages/content.html">
+            <span>Content</span>
+          </a>
+        </li>
+        <li>
+          <a href="/Pages/contacts.html">
+            <span>Contacts</span>
+          </a>
+        </li>
+        <li>
+          <a href="/Pages/gear.html">
+            <span>Gear</span>
             </a>
-          </li>
-          <li>
-            <a href="/Pages/content.html">
-              <span>Content</span>
-            </a>
-          </li>
-          <li>
-            <a href="/Pages/contacts.html">
-              <span>Contacts</span>
-            </a>
-          </li>
-          <li>
-            <a href="/Pages/gear.html">
-              <span>Gear</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
-      </section>
-    </div>
-  
+        </li>
+      </ul>
+    </nav>
+    </section>
+  </div>
+
   <div class="bottombox"> <!-- Hero Section -->
   <center>
     <section class="contactsInfo">
