--- a/Pages/gear.html
+++ b/Pages/gear.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/style.css">
     <link rel="icon" type="image/x-icon" href="/Images/logo.gif">
 
-    <script src="/script.js"></script>
+    <script src="/script.js">
+  </script>
   </head>
   <body>
     <!-- Navbar and logos -->
@@ -37,22 +38,33 @@
         <li>
           <a href="/Pages/gear.html">
             <span>Gear</span>
-          </a>
+            </a>
         </li>
       </ul>
     </nav>
     </section>
   </div>
 
-  <div class="bottombox"> <!-- Hero Section -->
-    <section class="display">
-      <h1>My Content</h1>
-    </section>
-    <p>
-      <center>
-      ...
-    </center>
-    </p>
+  <div class="gearcontents">
+    <div class="headphones">
+     <img src="/Images/razer_kraken_x.png">
+     <a href="https://www.razer.com/ca-en/gaming-headsets/Razer-Kraken-V3-X/RZ04-03750300-R3U1" target="_blank">
+        <span>Razer Kraken X</span>
+     </a>
+    </div>
+    <div class="keyboard">
+        <img src="/Images/rcl.png">
+        <a href="https://www.bestbuy.ca/en-ca/product/razer-cynosa-lite-ergonomic-gaming-keyboard/14682843" target="_blank">
+            <span>Razer Cynosa Lite</span>
+        </a>
+    </div>
+    <div class="mouse">
+        <img src="/Images/razer-cobra-hero.webp">
+        <a href="https://www.razer.com/ca-en/gaming-mice/razer-cobra" target="_blank">
+            <span>Razer Cobra</span>
+        </a>
+    </div>
   </div>
+
   </body>
 </html>
