--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
             <span>Contacts</span>
           </a>
         </li>
+        <li>
+          <a href="/Pages/gear.html">
+            <span>Gear</span>
+          </a>
+        </li>
       </ul>
     </nav>
     </section>
