--- a/Pages/content.html
+++ b/Pages/content.html
@@ -50,7 +50,9 @@
     </section>
     <p>
       <center>
-      ...
+      <a href="https://starmadedock.net/members/starmade-lover.689109/#resources"> StarMade Dock Content</a>
+      <a href="https://github.com/PR0G4M3R?tab=repositories"> Coding Projects</a>
+      <a href="https://discord.gg/CsmPRTkxry"> Discord Content Channel</a>
     </center>
     </p>
   </div>
