--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           Mortal Kombat: PR0G4M3R
         </li>
         <li>
-
+          Diablo Immortal: PR0G4M3ROG / Sorcerer5528
         </li>
       </ul>
     </div>
