--- a/Pages/content.html
+++ b/Pages/content.html
@@ -47,7 +47,7 @@
   <div class="bottombox"> <!-- Hero Section -->
     <section class="display">
       <h1>My Content</h1>
-    </section>
+    </section class="contentInfo">
     <p>
       <center>
       <a href="https://starmadedock.net/members/starmade-lover.689109/#resources"> StarMade Dock Content</a>
