--- a/Pages/content.html
+++ b/Pages/content.html
@@ -47,14 +47,21 @@
   <div class="bottombox"> <!-- Hero Section -->
     <section class="display">
       <h1>My Content</h1>
+    <center>
     </section class="contentInfo">
-    <p>
-      <center>
-      <a href="https://starmadedock.net/members/starmade-lover.689109/#resources"> StarMade Dock Content</a>
-      <a href="https://github.com/PR0G4M3R?tab=repositories"> Coding Projects</a>
-      <a href="https://discord.gg/CsmPRTkxry"> Discord Content Channel</a>
-    </center>
-    </p>
+
+    <ul>
+      <li>
+        <a href="https://starmadedock.net/members/starmade-lover.689109/#resources" target="_blank"> StarMade Dock Content</a>
+      </li>
+      <li>
+        <a href="https://github.com/PR0G4M3R?tab=repositories" target="_blank"> Coding Projects</a>
+      </li>
+      <li>
+        <a href="https://discord.gg/CsmPRTkxry" target="_blank"> Discord Content Channel</a>
+      </li>
+    </ul>
+  </center>
   </div>
   </body>
 </html>
